<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/linear_layout"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"

    android:paddingTop="30dp"
    android:paddingBottom="50dp"
    android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_add_black_24dp"
            android:scaleType="centerCrop" />

        <TextView
            fontPath="fonts/nunito_extra_bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="Add a Record"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            tools:ignore="MissingPrefix" />

        <TextView
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="Fill the details below to track your Health"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:alpha="0.8"
            android:textSize="18sp"
            tools:ignore="MissingPrefix" />

    <TextView
        android:layout_marginLeft="3dp"
        fontPath="fonts/nunito_light.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Date"
        tools:ignore="MissingPrefix" />

    <EditText
        android:textSize="14sp"
        fontPath="fonts/nunito_light.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:background="@drawable/btn_border"
        android:padding="10dp"
        android:id="@+id/date"
        tools:ignore="MissingPrefix" />

    <TextView
        android:layout_marginLeft="3dp"
        fontPath="fonts/nunito_light.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Time"
        tools:ignore="MissingPrefix" />

    <EditText
        android:textSize="14sp"
        fontPath="fonts/nunito_light.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:background="@drawable/btn_border"
        android:padding="10dp"
        android:id="@+id/time"
        tools:ignore="MissingPrefix" />
        <TextView
            android:layout_marginLeft="3dp"
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Systolic Pressure"
            tools:ignore="MissingPrefix" />

        <EditText
            android:textSize="14sp"
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:background="@drawable/btn_border"
            android:padding="10dp"
            android:inputType="number"
            android:id="@+id/systolic_pressure"
            tools:ignore="MissingPrefix" />

    <TextView
        android:layout_marginLeft="3dp"
        fontPath="fonts/nunito_light.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Diastolic Pressure"
        tools:ignore="MissingPrefix" />

    <EditText
        android:textSize="14sp"
        fontPath="fonts/nunito_light.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:background="@drawable/btn_border"
        android:padding="10dp"
        android:inputType="number"
        android:id="@+id/diastolic_pressure"
        tools:ignore="MissingPrefix" />

    <TextView
        android:layout_marginLeft="3dp"
        fontPath="fonts/nunito_light.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Heart Rate"
        tools:ignore="MissingPrefix" />

    <EditText
        android:textSize="14sp"
        fontPath="fonts/nunito_light.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:background="@drawable/btn_border"
        android:padding="10dp"
        android:inputType="number"
        android:id="@+id/heart_rate"
        tools:ignore="MissingPrefix" />

    <TextView
        android:layout_marginLeft="3dp"
        fontPath="fonts/nunito_light.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Comment"
        tools:ignore="MissingPrefix" />

    <EditText
        android:textSize="14sp"
        fontPath="fonts/nunito_light.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:background="@drawable/btn_border"
        android:padding="10dp"
        android:maxLength="20"
        android:id="@+id/comment"
        tools:ignore="MissingPrefix" />



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add"
        android:text="Add"
        android:background="@drawable/btn_background"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="40dp" />

</LinearLayout>
</ScrollView>