...
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="All Records"
       fontPath="fonts/nunito_extra_bold.ttf"
       android:textStyle="bold"
       android:textColor="@color/colorAccent"
       android:textSize="28sp"
       tools:ignore="MissingPrefix" />

...
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="70dp"
       android:text="Add"
       android:drawablePadding="10dp"
       android:paddingTop="10dp"
       android:id="@+id/addTask"
       android:layout_gravity="center"
       android:textColor="@color/colorAccent"
       android:textSize="20sp"
       android:drawableLeft="@drawable/ic_add_black_24dp"
       android:textAlignment="center"
       android:layout_weight="0.5"
...
