...
                android:id="@+id/time_t"
                android:textColor="@android:color/black"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/options_t"
                    android:background="@drawable/more"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
...
